Adjust minor layout issues with add button

--- a/app/assets/stylesheets/apps.scss
+++ b/app/assets/stylesheets/apps.scss
@@ -9,4 +9,8 @@
   a {
     color: brown;
   }
+
+  .add {
+    margin-left: 75px;
+  }
 }
