--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -9,4 +9,8 @@
   a {
     color: yellow;
   }
+
+  .add {
+    margin-left: 75px;
+  }
 }
