--- a/app/assets/stylesheets/websites.scss
+++ b/app/assets/stylesheets/websites.scss
@@ -40,5 +40,9 @@
       height: auto;
       margin: auto;
     }
+
+    .add {
+      margin-left: 75px;
+    }
   }
 }
